2009-05-22  Sven Panne  <sven.panne@aedion.de>
	* include/GL/freeglut_std.h,src/freeglut_init.c,src/freeglut_internal.h,
	  src/freeglut_menu.c,src/freeglut_window.c,src/freeglutdll.def: Added the
	  ugly ATEXIT_HACK from GLUT 3.7, making freeglut binary compatible with the
	  GLUT DLLs out in the wild.

	* src/freeglutdll.def: Removed obsolete lines. Fixed version number.

	* freeglut_vs2008.vcproj: Use our module definition file, so we get
	  undecorated names in the resulting DLL, just like the classic GLUT DLL
	  from Nate Robins.

2009-04-05  Sven Panne  <sven.panne@aedion.de>

	* Makefile.am: Added more project/workspace/... files to distribution.
	* .cvsignore,doc/.cvsignore,include/.cvsignore,include/GL/.cvsignore,
	  progs/.cvsignore,progs/demos/.cvsignore,
	  progs/demos/CallbackMaker/.cvsignore,progs/demos/Fractals/.cvsignore,
	  progs/demos/Fractals_random/.cvsignore,progs/demos/Lorenz/.cvsignore,
	  progs/demos/One/.cvsignore,progs/demos/shapes/.cvsignore,
	  src/.cvsignore: Removed remnants of CVS.

2009-03-30  Sven Panne  <sven.panne@aedion.de>

	* progs/demos/smooth_opengl3/smooth_opengl3.c: Make the example fully
	  OpenGL-3.1-compliant.

2009-03-27  Sven Panne  <sven.panne@aedion.de>

	* progs/demos/smooth_opengl3/smooth_opengl3.c: Make Visual C happy by
	  including stddef.h and explicitly marking some literals as float.

2009-03-26  Sven Panne  <sven.panne@aedion.de>

	* src/freeglut_init.c,src/freeglut_input_devices.c: Unbreak the build:
	  C++ style comments are not allowed in ISO C90

2009-03-19  John F. Fay <john.fay.ctr@eglin.af.mil>

	* src/freeglut_input_devices.c: Fixing "freeglut_input_devices.c" for
	  MSVS2005 and later per e-mail from Diederick Niehorster dated Thu
	  3/19/2009 6:57 AM

2009-03-17  John F. Fay <john.fay.ctr@eglin.af.mil>

	* src/freeglut_init.c, src/freeglut_input_devices.c: Removing some build
	  warnings from deprecated functions for VS2008 per e-mail from
	  Diederick Niehorster dated Tue 3/10/2009